[tool.poetry]
name = "kit"
version = "0.1.0"
description = ""
authors = ["Sinder <rasul_sadullayev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.7.0"
sqlalchemy = "^2.0.30"
cachetools = "^5.3.3"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
